# cryptopals

./: Cargo.toml  README.md  oldlock
.github/workflows/: CI.yml
crypto/: Cargo.toml
crypto/src/: add_round_key.rs  key_expansion.rs  lib.rs  mix_columns.rs  pkcs7.rs  random.rs  sbox.rs  shift_rows.rs  utils.rs
crypto/src/aes/: cbc.rs  ctr.rs  ecb.rs  mod.rs
crypto/src/aes/ecb/: cryptanalysis.rs  mod.rs
crypto/src/aes/modules/: add_round_key.rs  key_expansion.rs  mix_columns.rs  mod.rs  sbox.rs  shift_rows.rs
crypto/src/hash/: md4.rs  mod.rs  sha1.rs
crypto/src/mac/: hmac.rs  md4_mac.rs  mod.rs  sha1_mac.rs
https_client/: Cargo.toml
https_client/src/: main.rs
set-1/: Cargo.toml
set-1/src/: custom_aes.rs  ex_1_hex_to_b64.rs  ex_4_detect_single_character_xor.rs  ex_5_repeating_key_xor.rs  ex_6_break_repeating_key_xor.rs  ex_7_aes_in_ecb_mode.rs  ex_8_aes_in_ecb_mode.rs  lib.rs  shared.rs
set_1/: Cargo.toml
set_1/src/: custom_aes.rs  ex_1_hex_to_b64.rs  ex_2_fixed_xor.rs  ex_3_single_byte_xor_cipher.rs  ex_5_repeating_key_xor.rs  ex_6_break_repeating_key_xor.rs  ex_7_aes_in_ecb_mode.rs  ex_8_find_aes_ecb_cyphertext.rs  lib.rs  shared.rs
set_2/: Cargo.toml
set_2/src/: ex_09_pkcs_padding.rs  ex_10_cbc_mode.rs  ex_11_ecb_cbc_oracle.rs  ex_12_byte_at_a_time_ecb_decryption.rs  ex_13_ecb_cut_and_paste.rs  ex_14_byte_at_a_time_ecb_decryption_harder.rs  ex_15_pkcs7_padding_validation.rs  ex_16_cbc_bitflipping_attack.rs  ex_9_pkcs_padding.rs  lib.rs
set_3/: Cargo.toml
set_3/src/: ex_17_the_cbc_padding_oracle.rs  ex_18_ctr_stream_cipher_mode.rs  ex_19_break_fixed_nonce_ctr_mode_using_substitutions.rs  ex_20_break_fixed_nonce_ctr_statistically.rs  ex_21_implement_the_mt19937_mersenne_twister_rng.rs  ex_22_crack_an_mt19937_seed.rs  ex_23_clone_an_mt19937_rng_from_its_output.rs  ex_24_create_the_mt19937_stream_cipher_and_break_it.rs  lib.rs
set_4/: Cargo.toml
set_4/src/: ex_25_break_random_access_readwrite_aes_ctr.rs  ex_26_ctr_bitflipping.rs  ex_27_recover_key_from_cbc.rs  ex_28_sha1_keyed_mac.rs  ex_29_break_sha1_keyed_mac_length_extension.rs  ex_30_break_md4_keyed_mac_length_extension.rs  ex_31_implement_and_break_hmac_sha1_with_an_artificial_timing_leak.rs  ex_32_break_hmac_sha1_with_a_slightly_less_artificial_timing_leak.rs  lib.rs
set_5/: Cargo.toml
set_5/src/: ex_33_implement_diffie_hellman.rs  ex_34_implement_a_mitm_key_fixing_attack_on_diffie_hellman_with_parameter_injection.rs  ex_35_implement_dh_with_negotiated_groups_and_break_malicious_g_parameters.rs  ex_36_implement_secure_remote_password_srp.rs  lib.rs
var/: aes.py  rnd.py
