[package]
name = "set_1"
version = "0.1.0"
authors = ["Federico Ponzi <isaacisback92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
hex-literal = "0.2.1"
maplit = "1.0.2"
hex = "0.4.2"
aes = "0.6.0"
block-modes = "0.7.0"