[package]
name = "set_2"
version = "0.1.0"
authors = ["Federico Ponzi <me@fponzi.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "~0"
hex-literal = "~0"
maplit = "1.0.2"
hex = "0.4.2"
aes = "~0"
block-modes = "~0"
rand = "~0.8"
crypto = { path = "../crypto" }