[package]
name = "set_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "~0.22"
hex-literal = "~0.4"
maplit = "~1.0"
rand = "~0.8"
chrono = "~0.4"
crypto = { path = "../crypto" }
actix-web = "4"
serde = { version = "1", features = ["derive"] }
