[package]
name = "set_5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
hex-literal = "0.4.1"
maplit = "1.0.2"
rand = "~0.8"
chrono = "~0.4"
crypto = {path = "../crypto"}
num-bigint = "~0.4"
hex = "0.4.2"
num-traits = "~0.2"